Name:                   gpio
Version:                0.5.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/gpio
Bug-Reports:            https://github.com/dhess/gpio/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3
Category:               System
Synopsis:               Monads for GPIO in Haskell
Description:
  This package provides an embedded DSL for writing
  platform-independent GPIO programs in Haskell. Currently only Linux
  is supported (via the @sysfs@ filesystem), but other platforms will
  be supported in the future.
  .
  The GPIO eDSL is implemented as a functor for the free monad
  transformer, so it is easily embedded in other monad transformer
  stacks which perform I/O.
  .
  Monads and low-level functions are also provided for each supported
  platform's native GPIO API, so that you can program directly to the
  platform API and avoid the overhead of the eDSL interpreter.
  .
  Example programs are provided in the 'examples' directory of the
  source code distribution.

Extra-Doc-Files:        README.md
Extra-Source-Files:     .travis.yml
                      , default.nix
                      , shell.nix
                      , stack.yaml
                      , stack-lts-2.yaml
                      , stack-lts-3.yaml                                

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      System.GPIO
                      , System.GPIO.Free
                      , System.GPIO.Linux
                      , System.GPIO.Linux.Sysfs
                      , System.GPIO.Linux.Sysfs.Free
                      , System.GPIO.Linux.Sysfs.IO
                      , System.GPIO.Linux.Sysfs.Monad
                      , System.GPIO.Linux.Sysfs.Native
                      , System.GPIO.Linux.Sysfs.Types
                      , System.GPIO.Linux.Sysfs.Util
                      , System.GPIO.Types
  Other-Extensions:     CPP
                      , DeriveDataTypeable
                      , DeriveGeneric
                      , FlexibleContexts
                      , FlexibleInstances
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , LambdaCase
                      , OverloadedStrings
                      , PackageImports
                      , QuasiQuotes
                      , Safe
                      , TemplateHaskell
                      , Trustworthy
                      , TypeSynonymInstances
  Build-Depends:        QuickCheck
                      , base ==4.*
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , free
                      , inline-c
                      , mtl
                      , text
                      , transformers
                      , transformers-compat
                      , unix
                      , unix-bytestring
  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
  CC-Options:           -Wall

-- Executable gpio-sysfs-example
--   Main-Is:              Sysfs.hs
--   HS-Source-Dirs:       examples
--   Build-Depends:        base ==4.*
--                       , async
--                       , gpio
--                       , mtl
--                       , optparse-applicative
--                       , transformers
--                       , transformers-compat
--   Default-Language:     Haskell2010
--   Ghc-Options:          -Wall -threaded

Executable gpio-example
  Main-Is:              Gpio.hs
  HS-Source-Dirs:       examples
  Build-Depends:        base ==4.*
                      , async
                      , gpio
                      , mtl
                      , optparse-applicative
                      , transformers
                      , transformers-compat

  Default-Language:     Haskell2010
  Ghc-Options:          -Wall -threaded

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        QuickCheck
                      , base ==4.*
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , free
                      , hspec
                      , inline-c
                      , mtl
                      , text
                      , transformers
                      , transformers-compat
                      , unix
                      , unix-bytestring
  Other-modules:        System.GPIO
                      , System.GPIO.Free
                      , System.GPIO.Linux
                      , System.GPIO.Linux.Sysfs
                      , System.GPIO.Linux.Sysfs.Free
                      , System.GPIO.Linux.Sysfs.IO
                      , System.GPIO.Linux.Sysfs.Monad
                      , System.GPIO.Linux.Sysfs.Native
                      , System.GPIO.Linux.Sysfs.Types
                      , System.GPIO.Linux.Sysfs.Util
                      , System.GPIO.Types

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/gpio.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/gpio.git
  Tag:                  0.5.1
