Name:                   gpio
Version:                0.5.1
Cabal-Version:          >= 1.10
Build-Type:             Simple
Author:                 Drew Hess <src@drewhess.com>
Maintainer:             Drew Hess <src@drewhess.com>
Homepage:               https://github.com/dhess/gpio
Bug-Reports:            https://github.com/dhess/gpio/issues/
Stability:              experimental
License:                BSD3
License-File:           LICENSE
Copyright:              Copyright (c) 2016, Drew Hess
Tested-With:            GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3
Category:               System
Synopsis:               Monads for GPIO in Haskell
Description:
  This package provides an embedded DSL for writing
  platform-independent GPIO programs in Haskell. Currently only Linux
  is supported (via the @sysfs@ filesystem), but other platforms will
  be supported in the future.
  .
  Monads and low-level functions are also provided for each supported
  platform's native GPIO API, so that you can program directly to the
  platform API and avoid the overhead of the eDSL interpreter.
  .
  Example programs are provided in the 'examples' directory of the
  source code distribution. There is also a "System.GPIO.Tutorial"
  module, which explains how to use the cross-platform DSL.
Extra-Doc-Files:        README.md
Extra-Source-Files:     .travis.yml
                      , default.nix
                      , shell.nix
                      , stack.yaml
                      , stack-lts-2.yaml
                      , stack-lts-3.yaml                                

-- Enable Linux BeagleBone-specific tests. See
-- test/System/GPIO/Linux/Sysfs/BeagleBoneSpec.hs for requirements.
--
-- > cabal test -flinux-bbone-tests
Flag linux-bbone-tests
  Default: False
  Manual: True

Flag test-doctests
  Default: True
  Manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  Exposed-Modules:      System.GPIO
                      , System.GPIO.Linux
                      , System.GPIO.Linux.Sysfs
                      , System.GPIO.Linux.Sysfs.IO
                      , System.GPIO.Linux.Sysfs.Monad
                      , System.GPIO.Linux.Sysfs.Mock
                      , System.GPIO.Linux.Sysfs.Types
                      , System.GPIO.Linux.Sysfs.Util
                      , System.GPIO.Monad
                      , System.GPIO.Tutorial
                      , System.GPIO.Types
  Other-Modules:        System.GPIO.Linux.Sysfs.Mock.Internal
  Other-Extensions:     CPP
                      , DeriveDataTypeable
                      , DeriveGeneric
                      , ExistentialQuantification
                      , FlexibleContexts
                      , FlexibleInstances
                      , FunctionalDependencies
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , PackageImports
                      , QuasiQuotes
                      , Safe
                      , TemplateHaskell
                      , Trustworthy
                      , TypeSynonymInstances
                      , UndecidableInstances
  Build-Depends:        QuickCheck
                      , base ==4.*
                      , base-compat
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , inline-c
                      , mtl
                      , mtl-compat
                      , text
                      , transformers
                      , transformers-compat
                      , unix
                      , unix-bytestring
  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
  CC-Options:           -Wall

Executable gpio-sysfs-example
  Main-Is:              Sysfs.hs
  HS-Source-Dirs:       examples
  Build-Depends:        base ==4.*
                      , async
                      , base-compat
                      , gpio
                      , mtl
                      , mtl-compat
                      , optparse-applicative
                      , transformers
                      , transformers-compat
  Default-Language:     Haskell2010
  Ghc-Options:          -Wall -threaded

Executable gpio-example
  Main-Is:              Gpio.hs
  HS-Source-Dirs:       examples
  Build-Depends:        base ==4.*
                      , async
                      , base-compat
                      , exceptions
                      , gpio
                      , mtl
                      , mtl-compat
                      , optparse-applicative
                      , transformers
                      , transformers-compat

  Default-Language:     Haskell2010
  Ghc-Options:          -Wall -threaded

Executable gpio-reader-example
  Main-Is:              GpioReader.hs
  HS-Source-Dirs:       examples
  Build-Depends:        base ==4.*
                      , async
                      , base-compat
                      , exceptions
                      , gpio
                      , mtl
                      , mtl-compat
                      , optparse-applicative
                      , transformers
                      , transformers-compat

  Default-Language:     Haskell2010
  Ghc-Options:          -Wall -threaded

Test-Suite doctest
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall -threaded
  Main-Is:              doctest.hs
  -- Disabled on GHC 7.8.x and earlier due to missing Data.Bits bits.
  If !flag(test-doctests) || impl(ghc < 7.10)
    Buildable: False
  Else
    Build-Depends:      base
                      , doctest
                      , filepath

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall -threaded
  Main-Is:              Main.hs
  Build-Depends:        QuickCheck
                      , base ==4.*
                      , async
                      , base-compat
                      , bytestring
                      , containers
                      , directory
                      , exceptions
                      , filepath
                      , hspec
                      , inline-c
                      , mtl
                      , mtl-compat
                      , text
                      , transformers
                      , transformers-compat
                      , unix
                      , unix-bytestring
  Other-modules:        System.GPIO
                      , System.GPIO.Linux
                      , System.GPIO.Linux.Sysfs
                      , System.GPIO.Linux.Sysfs.IO
                      , System.GPIO.Linux.Sysfs.Monad
                      , System.GPIO.Linux.Sysfs.Mock
                      , System.GPIO.Linux.Sysfs.Mock.Internal
                      , System.GPIO.Linux.Sysfs.Types
                      , System.GPIO.Linux.Sysfs.Util
                      , System.GPIO.Monad
                      , System.GPIO.Tutorial
                      , System.GPIO.Types
  C-Sources:            src/System/GPIO/Linux/Sysfs/IO.c
  If flag(linux-bbone-tests)
    cpp-options: -DRUN_LINUX_BBONE_TESTS=1

Source-Repository head
  Type:                 git
  Location:             git://github.com/dhess/gpio.git

Source-Repository this
  Type:                 git
  Location:             git://github.com/dhess/gpio.git
  Tag:                  0.5.1
